[edit] product.js - getMyProducts & swagger.json - List my products
