# docs/swagger.json
@@ -79,6 +79,29 @@
         ],
         "tags": ["Auth"]
       }
+    },
+    "/products/my-products": {
+      "get": {
+        "summary": "List my products",
+        "description": "Retrieve list of my products",
+        "operationId": "listMyProducts",
+        "security": [{ "BearerTokenAuth": [] }],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/coreListMyProductsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": ["Auth"]
+      }
     }
   },
   "definitions": {
@@ -126,6 +149,105 @@
         },
         "token": {
           "type": "string"
+        }
+      }
+    },
+    "coreListMyProductsResponse": {
+      "type": "object",
+      "properties": {
+        "products": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/coreMyProducts"
+          }
+        },
+        "diminati": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/coreDiminati"
+          }
+        },
+        "terjual": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/coreTerjual"
+          }
+        }
+      }
+    },
+    "coreMyProducts": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "productName": {
+          "type": "string"
+        },
+        "price": {
+          "type": "integer"
+        },
+        "image": {
+          "type": "string"
+        }
+      }
+    },
+    "coreDiminati": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "productName": {
+          "type": "string"
+        },
+        "price": {
+          "type": "integer"
+        },
+        "image": {
+          "type": "string"
+        },
+        "buyerName": {
+          "type": "string"
+        },
+        "buyerPics": {
+          "type": "string"
+        },
+        "bidPrice": {
+          "type": "integer"
+        }
+      }
+    },
+    "coreTerjual": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "productName": {
+          "type": "string"
+        },
+        "price": {
+          "type": "integer"
+        },
+        "image": {
+          "type": "string"
+        },
+        "buyerName": {
+          "type": "string"
+        },
+        "buyerPics": {
+          "type": "string"
+        },
+        "bidPrice": {
+          "type": "integer"
+        },
+        "soldAt": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     },
